fix horizontal scroll when progress bar is being shown and fix progress bar position on mobile view

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -62,7 +62,7 @@
 
   &_secondary {
     background: #3849F9;
-    max-height: 83px;
+    max-height: 92px;
     box-shadow: 0px 7px 19px rgba(0, 0, 0, 0.11);
   }
 
@@ -246,7 +246,7 @@
 
 .progress-bar {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   z-index: 999;
 }
 
